# purse

./: pyproject.toml
src/: examples.py
src/asutils/: dataclasses.py  logger.py  signals.py  types.py  typing.py  waiter.py
src/asutils/ext/aiogram/bootstrap/: bot.py  polling.py  webhook.py
src/asutils/ext/aiogram/routers/: errors.py
src/asutils/http/clients/: __init__.py  httpx.py  pure.py  requests.py
src/asutils/logging/: __init__.py  logconfig.py  telegram.py
src/purse/: _meta.py
src/purse/ext/aiogram/: decorators.py
src/purse/ext/aiogram/bootstrap/: bot.py
src/purse/interfaces/: memorepo.py
